--- a/CCM_New/Server/appsettings.json
+++ b/CCM_New/Server/appsettings.json
@@ -7,8 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-M9PRPPC\\MSSQLSERVER01;Initial Catalog=CCM;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
-    "DomConnectionString": "Data Source=DESKTOP-256JG\\SQLEXPRESS;Initial Catalog=TEST;User Id=jarek;Password=test;Integrated Security=False;MultipleActiveResultSets=true"
+    "DefaultConnectionLaptop": "Data Source=DESKTOP-M9PRPPC\\MSSQLSERVER01;Initial Catalog=CCM;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "DefaultConnection": "Data Source=172.17.80.141;Initial Catalog=CCM;User Id=ccm;Password=q*Cr0hlSa*6Pa$Uhedi#;Integrated Security=False;MultipleActiveResultSets=true"
   },
   "AllowedHosts": "*",
   "Jwt": {
