zmiana hasla dodana

--- a/CCM_New/Client/CCM_New.Client.csproj
+++ b/CCM_New/Client/CCM_New.Client.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\Shared\CCM_New.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\buttons\" />
+  </ItemGroup>
+
 </Project>
