--- a/CCM_New/Server/appsettings.json
+++ b/CCM_New/Server/appsettings.json
@@ -7,8 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=JGTPVDQ6V5S4;Initial Catalog=CCM;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
-    "DefaultConnectionPraca": "Data Source=172.17.80.141;Initial Catalog=CCM_JG;User Id=ccm;Password=q*Cr0hlSa*6Pa$Uhedi#;Integrated Security=False;MultipleActiveResultSets=true"
+    "DefaultConnectionDom": "Data Source=JGTPVDQ6V5S4;Initial Catalog=CCMJG;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "DefaultConnection": "Data Source=172.17.80.141;Initial Catalog=CCM_JG;User Id=ccm;Password=q*Cr0hlSa*6Pa$Uhedi#;Integrated Security=False;MultipleActiveResultSets=true"
   }
 }
   
